--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7
 EXPOSE 5000
-COPY /app/app.py /app
-COPY /app/requirements.txt /app
 WORKDIR /app
+COPY requirements.txt /app
 RUN pip install -r requirements.txt
+COPY app.py /app
 CMD python app.py
