--- a/app-deploy.yaml
+++ b/app-deploy.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: flaskapi
-          image: deneme
+          image: ozidochub/app:latest
           ports:
             - containerPort: 5000
           env:
