modified db yaml and config map

--- a/db-deploy.yaml
+++ b/db-deploy.yaml
@@ -1,36 +1,100 @@
----
+# ---
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: mysql
+#   labels:
+#     app: db
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: db
+#   template:
+#     metadata:
+#       labels:
+#         app: db
+#     spec:
+#       containers:
+#       - name: mysql
+#         image: mysql:8.0
+#         env:
+#         - name: MYSQL_ROOT_PASSWORD
+#           value: root
+#         ports:
+#         - containerPort: 3306
+#           name: db-container
+#         volumeMounts:
+#           - name: mysql-persistent-storage
+#             mountPath: /var/lib/mysql
+#           - name: mysql-db-storage
+#             mountPath: /docker-entrypoint-initdb.d/init.sql
+#       volumes:
+#         - name: mysql-persistent-storage
+#           persistentVolumeClaim:
+#             claimName: mysql-pv-claim
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql
+  name: mysql-deployment
   labels:
-    app: db
+    app: mysql
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: db
+      app: mysql
   template:
     metadata:
       labels:
-        app: db
+        app: mysql
     spec:
       containers:
-      - name: mysql
-        image: mysql:8.0
-        env:
-        - name: MYSQL_ROOT_PASSWORD
-          value: root
-        ports:
-        - containerPort: 3306
-          name: db-container
-        volumeMounts:
-          - name: mysql-persistent-storage
-            mountPath: /var/lib/mysql
+        - name: mysql
+          image: mysql:5.7
+          ports:
+            - containerPort: 3306
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              value: root
+              # valueFrom:
+              #   secretKeyRef:
+              #     name: mysql-secrets
+              #     key: ROOT_PASSWORD
+          volumeMounts:
+            - name: mysql-initdb
+              mountPath: /docker-entrypoint-initdb.d
+            - mountPath: "/var/lib/mysql"
+              subPath: "mysql"
+              name: mysql-data
       volumes:
-        - name: mysql-persistent-storage
+        - name: mysql-initdb
+          configMap:
+            name: mysql-initdb-config
+        - name: mysql-data
           persistentVolumeClaim:
             claimName: mysql-pv-claim
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mysql-initdb-config
+data:
+  init.sql: |
+    CREATE DATABASE IF NOT EXISTS employees;
+    USE employees;
+
+    CREATE TABLE IF NOT EXISTS employee_data (
+      Employee_Name VARCHAR(50),
+      Title VARCHAR(50)
+    );
+
+    INSERT INTO employee_data
+      (Employee_Name, Title)
+    VALUES
+      ('oguzhan ALTINOLUK', 'Devops'),
+      ('Samet Ustaoglu', 'Devops');
 
 
 ---
