--- a/db-deploy.yaml
+++ b/db-deploy.yaml
@@ -37,18 +37,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mysql-deployment
+  name: mysql
   labels:
-    app: mysql
+    app: db
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: mysql
+      app: db
   template:
     metadata:
       labels:
-        app: mysql
+        app: db
     spec:
       containers:
         - name: mysql
@@ -75,27 +75,6 @@ spec:
         - name: mysql-data
           persistentVolumeClaim:
             claimName: mysql-pv-claim
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: mysql-initdb-config
-data:
-  init.sql: |
-    CREATE DATABASE IF NOT EXISTS employees;
-    USE employees;
-
-    CREATE TABLE IF NOT EXISTS employee_data (
-      Employee_Name VARCHAR(50),
-      Title VARCHAR(50)
-    );
-
-    INSERT INTO employee_data
-      (Employee_Name, Title)
-    VALUES
-      ('oguzhan ALTINOLUK', 'Devops'),
-      ('Samet Ustaoglu', 'Devops');
-
 
 ---
 apiVersion: v1
