--- a/app-deploy.yaml
+++ b/app-deploy.yaml
@@ -33,7 +33,7 @@ spec:
   - port: 5001
     protocol: TCP
     targetPort: 5000
-    nodePort: 32223
+    nodePort: 32222
   selector:
     app: flaskapi
-  type: NodePort
+  type: NodePortß
